--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,19 @@
-script:
-  build: ./src
-  volumes:
-    - ./src:/src
-  net: "host" # so that the python script can POST data to localhost on host machine
+volume: "3.8"
+services:
+  script:
+    build: ./src
+    volumes:
+      - ./src:/src
+    net: "host" # so that the python script can POST data to localhost on host machine
 
-redis:
-  image: redis
-  ports:
-      - "6379"
-
-mynodeapp:
-    build: ./node_app
+  redis:
+    image: redis
     ports:
-        - "3000:3000"
-    links:
-      - redis
+        - "6379"
+
+  mynodeapp:
+      build: ./node_app
+      ports:
+          - "3000:3000"
+      links:
+        - redis
