--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     build: ./src
     volumes:
       - ./src:/src
-    networks: "192.168.0.149" # so that the python script can POST data to localhost on host machine
+    networks:
+      - "192.168.0.149" # so that the python script can POST data to localhost on host machine
 
   redis:
     image: redis
