--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,7 @@ services:
     build: ./src
     volumes:
       - ./src:/src
-    networks:
-      - "172.17.0.1" # so that the python script can POST data to localhost on host machine
+    net: "host" # so that the python script can POST data to localhost on host machine
 
   redis:
     image: redis
