--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,24 @@ services:
     volumes:
       - ./src:/src
     networks:
-      - host # so that the python script can POST data to localhost on host machine
+      - mynetwork
 
   redis:
     image: redis
     ports:
-      - "6379"
+      - "6379:6379"
+    networks:
+      - mynetwork
 
   mynodeapp:
     build: ./node_app
     ports:
       - "3000:3000"
-    links:
-      - redis
+    networks:
+			- mynetwork
+		depends_on:
+			- redis
+
+networks:
+	mynetwork:
+ 		driver: bridge
